# humanreadable

./: .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  pylama.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  lint_and_test.yml  publish.yml
examples/: humanreadable_examples.ipynb
humanreadable/: __init__.py  __version__.py  _base.py  _common.py  _const.py  _persec.py  _time.py  _types.py  error.py
requirements/: requirements.txt  test_requirements.txt
test/: test_persec.py  test_time.py
