[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
| humanreadable/_typing.py
'''
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.coverage.run]
source = ['humanreadable']
branch = true

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    'except ImportError',
    'raise NotImplementedError',
    'pass',
    'ABCmeta',
    'abstractmethod',
    'abstractproperty',
    'abstractclassmethod',
    'warnings.warn',
]
omit = [
    'humanreadable/_typing.py',
]

[tool.isort]
known_third_party = [
    'pytest'
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
    'humanreadable/_typing.py',
]

[tool.mypy]
ignore_missing_imports = true
python_version = 3.8

pretty = true

no_implicit_optional = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
md_report = true
md_report_verbose = 0
md_report_color = "auto"
